# etl_github

./: .dockerignore  .gitignore  Dockerfile  README.md  dag.py  docker-compose.yml  extract.py  extranct.py  input_schema.json  load.py  pyproject.toml  requirements.txt  transform.py
data/: compliance_20251228_142610.parquet  prs_extract_20251228_135517.json  prs_extract_20251228_135602.json  raw_prs_no_token_1766922546.json  scytale.duckdb
output/: compliance_report.csv
