[project]
name = "etl-github"
version = "0.1.0"
description = "Extrance "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=3.1.5",
    "black>=25.12.0",
    "duckdb>=1.4.3",
    "jsonschema>=4.25.1",
    "polars>=1.36.1",
    "requests>=2.32.5",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "PERF", "UP"] 
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
