[project]
name = "etl-github"
version = "0.1.0"
description = "Extract, Transform and Load from github api to duckdb"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow==2.11.0",
    "duckdb>=1.4.3",
    "jsonschema>=4.25.1",
    "numpy>=2.2.6",
    "polars>=1.36.1",
    "requests>=2.32.5",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "PERF", "UP"] 
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
